kubernetes/apps/network/external-services/storj/app/service.yaml
---
# Service for Garage web UI - routes to external IP
apiVersion: v1
kind: Service
metadata:
  name: storj
spec:
  ports:
    - name: http
      port: 80
      targetPort: 14002
      protocol: TCP
---
# EndpointSlice for openspeedtest web UI
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: storj-1
  labels:
    kubernetes.io/service-name: storj
addressType: IPv4
ports:
  - name: http
    port: 14002
    protocol: TCP
endpoints:
  - addresses:
      - "10.0.10.11"
