kubernetes/apps/network/external-services/storj/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: storj
  labels:
    auth: authentik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Storage
    gethomepage.dev/name: Storj
    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/storj.svg
    gatus.home-operations.com/endpoint: |
      group: storage
spec:
  hostnames: ["storj.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: storj
          port: 80
